updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am a software engineer.</p>
+      <h1>Where I'm From\</h1>
+      <p>I am from The Bronx, NY.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies are sports and anything DIY around the house.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software developer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Bloomfield, NJ.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love to figure thing out on my own, career mobility, career sector is future proof and in high demand.</p>
     </section>
 
     <footer id="footer">
