--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <h1>Introduction</h1>
       <p>I am a software engineer.</p>
       <h1>Where I'm From\</h1>
-      <p>I am from The Bronx, NY.</p>
+      <p>The Bronx, NY.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>My favorite hobbies are sports and anything DIY around the house.</p>
+      <p>sports and anything DIY around the house.</p>
       <h1>What's your dream job?</h1>
       <p>Software developer.</p>
       <h1>Where do you live?</h1>
