updating our details

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="details">
       <h1>Introduction</h1>
       <p>I am a software engineer.</p>
-      <h1>Where I'm From\</h1>
+      <h1>Where I'm From</h1>
       <p>The Bronx, NY.</p>
       <h1>What are your favorite hobbies?</h1>
       <p>sports and anything DIY around the house.</p>
