updating our details

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Bloomfield, NJ.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I love to figure thing out on my own, career mobility, career sector is future proof and in high demand.</p>
+      <p>I love to figure things out on my own, career mobility, career sector is future proof and in high demand.</p>
     </section>
 
     <footer id="footer">
